tests/parser/bad/cmodule-version-number-contract-name-lparen-rparen-with.scilla
scilla_version 0
contract Test
()

transsition something
()
